--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="দ্বীনদার প্র্যাক্টিসিং মুসলিমদের একটি ম্যাট্রিমনি ওয়েবসাইট"
     />
    
    
