--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="বিয়েকে সহজ করি, সুস্থ-সুন্দর সমাজ গড়ি।"
+      content="দুনিয়া থেকে জান্নাতে যাওয়ার এ-আঁকা বাঁকা কণ্টকাকীর্ণ পথটা পাড়ি দেয়ার জন্য এমন একজন সাথী প্রয়োজন, যাকে দেখলে আল্লাহর কথা মনে পড়ে, যার কথা শুনলে..."  
+      data-rh="true"
     />
    
    
